[package]
name = "rmc"
version = "0.2.6"
authors = ["Oleksiy Slyshyk <alexslyshyk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.11"
bstr = "1"

[profile.release]
lto = true
opt-level = "s"
strip = "debuginfo"