[package]
name = "rmc"
version = "0.3.0"
authors = ["Oleksiy Slyshyk <alexslyshyk@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "3"
bstr = "1"

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo"